Fix bug where create room modal wasn't visible on mobile

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -773,13 +773,7 @@ body.body--modal-open {
 }
 
 .modal__inner {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
   padding: 30px 50px;
-  overflow: auto;
 }
 
 .modal__inner--slider {
